change fonts on mobile, fix anonymous vote, fix one column clicking bug

--- a/compsocsite/static/css/mobile.css
+++ b/compsocsite/static/css/mobile.css
@@ -6,7 +6,7 @@ body {
 	margin-right: 0;
 	padding-left: 5px;
 	padding-right: 5px;
-	font-size: 200%;
+	font-size: 100%;
 }
 
 img.item {
@@ -28,15 +28,10 @@ input[type=text], input[type=url], input[type=email], input[type=password], inpu
 	display: block;
 	margin: 0;
 	width: 100%;
-	height: 60px;
-	line-height: 50px;
-	font-size: 40px;
+	font-size: 100%;
 	border: 1px solid #bbb;
 }
 
-li.li_item{
-	font-size: 50%;
-}
 
 input[type=checkbox] {
 	width: 44px;
@@ -69,7 +64,6 @@ button {
 .form-control {
 	margin: 0;
 	width: 100%;
-	height: 60px;
 	line-height: 50px;
 	font-size: 40px;
 	border: 1px solid #bbb;
